syntax="proto3";//使用的版本

option java_package="autogenerated";
option java_multiple_files=true;

//服务接口定义，服务端和客户端都要遵循该接口进行通信
service LibraryService{
    //接收请求，返回响应
    rpc add(BookRequest) returns(addResponse){}
    rpc queryById(SelectBookByIDRequest) returns(ExactBookResponse){}
    rpc queryByName(SelectBookByNameRequest) returns(VagueBookResponse){}
    rpc delete(DeleteRequest) returns(deleteResponse){}
}

message SelectBookByIDRequest{
    string id = 1;
}

message SelectBookByNameRequest{
    string name = 1;
}

message DeleteRequest{
    string id = 1;
}

message BookRequest{
    string id = 1;
    string name = 2;
}

message ExactBookResponse{
    BookRequest book = 1;
}

message VagueBookResponse{
    repeated BookRequest bookList = 1;
}

message addResponse{
    bool success = 1;
}

message deleteResponse{
    bool success = 1;
}